Thu May 27 12:42:23 2010  Akinori MUSHA  <knu@iDaemons.org>

	* LGPL: Removed.  We no longer have LGPL'd source files in our
	  tree.

Wed May 26 18:40:23 2010  Masaya Tarui  <tarui@ruby-lang.org>

	* test/rinda/test_rinda.rb (TupleSpaceTest, TupleSpaceProxyTest):
	  kill a used thread at teardown.  [ruby-dev:41397]

Wed May 26 11:50:09 2010  Eric Hodel  <drbrain@segment7.net>

	* marshal.c (Init_marshal): document marshal_dump and marshal_load.

Mon May 24 23:04:41 2010  Tanaka Akira  <akr@fsij.org>

	* error.c: fix wrong exception class name in rdoc.

Sat May 29 13:55:22 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_filesystem_encindex): avoid infinite require
	  loop. [ruby-core:30467]

Sat May 29 12:05:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/rdoc.rb (RDoc#read_file_contents): take care of BOM.
	  [ruby-dev:41452]

Sat May 29 09:34:32 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb: fix for --disable-gems.

Fri May 28 18:39:38 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_inspect): escape ASCII-compatible strings.

	* string.c (rb_str_inspect): escape ASCII-compatible strings.

Fri May 28 17:34:48 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* array.c (rb_ary_product): Use tmpary instead, to ensure marking
	  arrays by GC.

Fri May 28 11:58:42 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* array.c (rb_ary_product): Do not rely on GC, t0 should be
	  checked explicitly.

Fri May 28 10:40:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (checking_for): ignore toplevel.

Fri May 28 00:47:16 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* error.c (rb_bug): suppress the error report dialog if report_bug() 
	  is finished successfly.

Thu May 27 23:52:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/encoding.h (rb_filesystem_encindex): defined.

	* include/ruby/encoding.h (rb_locale_encindex): ditto.

	* encoding.c (rb_filesystem_encindex): remove static.
